# obs-mono

./: CLR.Interop.sln  CLR.Interop.userprefs  CMakeLists.txt  FindMono.cmake  Mono.Interop.sln  Mono.Interop.userprefs  obs-mono.c
CLR.Interop/: Base.cs  CLR.Interop.csproj  CLRHost.cs  Data.cs  IModule.cs  ImageSource.cs  Properties.cs  Source.cs
CLR.Interop/GS/: Effect.cs
Mono.Interop/: Base.cs  Module.cs  Mono.Interop.csproj  MonoHost.cs
Mono.Interop/Properties/: AssemblyInfo.cs
